--- a/app/assets/lang/en_US.toml
+++ b/app/assets/lang/en_US.toml
@@ -159,7 +159,7 @@ failureText = "콘솔 (CTRL + Shift + i) 에서 자세한 내용을 확인하세
 okay = "확인"
 
 [js.landing.selectedAccount]
-noAccountSelected = "선택된 계정 없음"
+noAccountSelected = "선택된 계정이 없습니다"
 
 [js.landing.selectedServer]
 noSelection = "선택된 서버 없음"
@@ -180,7 +180,7 @@ javaDownloadPrepare = "Java 다운로드 준비 중.."
 javaDownloadFailureTitle = "Java 다운로드 중 오류 발생"
 javaDownloadFailureText = "콘솔 (CTRL + Shift + i) 에서 자세한 내용을 확인하세요."
 javaRequired = "실행을 위해<br>Java가 필요합니다"
-javaRequiredMessage = "실행을 위해 유효한 64비트 Java {major} 를 설치해야 합니다.<br><br><a href=\"https://github.com/peunsu/MRSLauncher/wiki/Java-%EA%B4%80%EB%A6%AC#java-%EC%88%98%EB%8F%99-%EC%84%A4%EC%B9%98\">Java Management Guide</a>를 참조하여 Java 수동 설치 방법을 확인하세요."
+javaRequiredMessage = "실행을 위해 유효한 64비트 Java {major} 를 설치해야 합니다.<br><br><a href="#">Java Management Guide</a>를 참조하여 Java 수동 설치 방법을 확인하세요."
 javaRequiredDismiss = "확인"
 javaRequiredCancel = "돌아가기"
 
@@ -203,7 +203,7 @@ downloadingFiles = "파일 다운로드 중.."
 errorDuringFileDownloadTitle = "파일 다운로드 중 오류 발생"
 preparingToLaunch = "실행 준비 중.."
 launchingGame = "게임 실행 중.."
-launchWrapperNotDownloaded = "게임 실행을 위한 메인 파일(LaunchWrapper)을 다운로드할 수 없습니다.<br><br>문제 해결을 위해 임시로 안티바이러스 프로그램을 비활성화한 뒤 게임을 다시 실행해 보세요.<br><br>만약 이 문제가 계속된다면, <a href=\"https://github.com/peunsu/MRSLauncher/issues\">GitHub 이슈 페이지</a>에 사용 중인 안티바이러스 프로그램과 함께 문제를 제보해 주세요."
+launchWrapperNotDownloaded = "게임 실행을 위한 메인 파일(LaunchWrapper)을 다운로드할 수 없습니다.<br><br>문제 해결을 위해 임시로 백신 프로그램을 비활성화한 뒤 게임을 다시 실행해 보세요.<br><br>만약 이 문제가 계속된다면, 디스코드 문의방에 사용 중인 백신 프로그램과 함께 문제를 제보해 주세요."
 doneEnjoyServer = "완료. 즐거운 시간 되세요!"
 checkConsoleForDetails = "콘솔 (CTRL + Shift + i) 에서 자세한 내용을 확인하세요."
 
@@ -213,7 +213,7 @@ checking = "뉴스 확인 중"
 [js.landing.discord]
 loading = "게임 로딩 중.."
 joining = "서버 접속 중.."
-joined = "Mystic Red Space"
+joined = "그라시데아 서버"
 
 [js.overlay]
 dismiss = "닫기"
@@ -332,7 +332,7 @@ credentialsMissingTitle = "로그인 중 오류 발생:<br>자격 증명 누락"
 credentialsMissingDesc = "사용자 이름 또는 비밀번호가 비어있거나, 비밀번호가 3글자 미만으로 입력되었습니다."
 invalidSaltVersionTitle = "로그인 중 오류 발생:<br>유효하지 않은 Salt 버전"
 invalidSaltVersionDesc = "유효하지 않은 Salt 버전입니다."
-unsupportedMediaTypeTitle = "내부 오류 발새:<br>지원되지 않는 미디어 타입"
+unsupportedMediaTypeTitle = "내부 오류 발생:<br>지원되지 않는 미디어 타입"
 unsupportedMediaTypeDesc = "지원되지 않는 미디어 타입입니다. 개발자에게 이 문제를 보고하세요."
 accountGoneTitle = "로그인 중 오류 발생:<br>마이그레이션된 계정"
 accountGoneDesc = "Microsoft로 마이그레이션된 계정입니다. Microsoft 계정으로 로그인하세요."
